--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -16,7 +16,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 ##* '''1919,''' {{w|Ronald Firbank}}, ''{{w|Valmouth}}'', Duckworth, hardback edition, page 61
 ##*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergola itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
 ##: {{syn|en|fitch|foumart}}
-# {{lb|en|US|dialect}} A [[skunk]].
+# {{lb|en|US|dialects|including|Appalachian}} A [[skunk]].
 # {{lb|en|television}} A tubular device used to support lights on a set.
 #* '''1991''', Gerald Millerson, ''The Technique of Lighting for Television and Film'' (page 323)
 #*: This is adjustable telescopic tubing, wedged securely between floor and ceiling (vertical pole) or wall-to-wall (horizontal pole), within corridors, arches, window openings, doorways, etc. It may be held in position by a strong internal spring or end-screws. Designs include '''''polecat''', varipole, barricuda, jack tube, Acrow''.
@@ -112,8 +112,6 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 {{trans-bottom}}
 
 {{trans-see|skunk}}
-
-[[Category:Appalachian English]]
 
 ===Further reading===
 * {{pedia}}
