--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -330,6 +330,8 @@ Borrowed from {{bor|it|en|staff}}.
 ----
 
 ==Spanish==
+===Etymology===
+From {{bor|es|en|staff}}
 
 ===Pronunciation===
 * {{es-IPA|estaf}}
