--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -34,7 +34,7 @@ Perhaps a {{clq|en|la|potiusque sero quam numquam|nocap=1}} from the 4th book<re
 {{trans-mid}}
 * Hebrew: {{t|he|עדיף מאוחר מאשר לעולם לא}}
 * Hungarian: {{t+|hu|jobb későn, mint soha}}
-* Italian: {{t|it|meglio tardi che mai}}, {{t|it|non è mai troppo tardi}}
+* Italian: {{t|it|meglio tardi che mai}}
 * Japanese: {{t|ja|遅くてもやらないよりまし|tr=おそくてもやらないよりまし, osokutemo yaranai yori mashi|sc=Jpan}} <!-- to check {{t|ja|良いことよりも遅く|tr=よいことよりもおそく, yoi koto-yori-mo osoku|sc=Jpan}} -->
 * Kazakh: {{t|kk|ештен кеш жақсы}}
 * Latin: {{t|la|potius sero quam numquam}}, {{t|la|potiusque sero quam numquam}}
