--- a/en/b/Brandane.742083.wikitext
+++ b/en/b/Brandane.742083.wikitext
@@ -6,7 +6,7 @@ The origin of 'Brandane' may be in the name of [[w:Saint Brendan|Saint Brendan]]
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|archaic}} Collective name of the natives of Arran and Bute.
+# Collective name of the natives of Arran and Bute. Still widely used.
 # {{surname|en|from=Irish}}
 
 ===References===
