/* Proper noun */ <Brandane#61278705>

--- a/en/b/Brandane.742083.wikitext
+++ b/en/b/Brandane.742083.wikitext
@@ -6,7 +6,7 @@ The origin of 'Brandane' may be in the name of [[w:Saint Brendan|Saint Brendan]]
 ===Proper noun===
 {{en-proper noun}}
 
-# Collective name of the natives of Arran and Bute. Still widely used.
+# A native or inhabitant of [[Arran]] and [[Bute]]
 # {{surname|en|from=Irish}}
 
 ===References===
