--- a/en/o/owre.720028.wikitext
+++ b/en/o/owre.720028.wikitext
@@ -12,7 +12,7 @@ Forms.
 # {{obsolete form of|en|our}}
 
 ===Etymology 2===
-From {{inh|en|enm|oure}}, from {{inh|en|ang|ūr}}, from {{inh|en|gmw-pro|*ūr}}, from {{inh|en|gem-pro|*ūraz}}, {{l|en|gem-pro|*ūrô}}.
+From {{inh|en|enm|oure}}, from {{inh|en|ang|ūr}}, from {{inh|en|gmw-pro|*ūr}}, from {{inh|en|gem-pro|*ūraz}}, {{m|en|gem-pro|*ūrô}}.
 
 ====Noun====
 {{en-noun}}
