--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -193,6 +193,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Norwegian: {{t+|no|kanin|m}}
 * O'odham: {{t|ood|tohbi}}
 * Occitan: {{t+|oc|conilh|m}}, {{t|oc|lapin|m}}
+* Ojibwe: {{t|oj|waabooz}}
 * Old English: {{t|ang|hāra|m}}
 * Old Tupi: {{t|tpw|tapiti}}
 * Oroqen: {{t|orh|tʊkʃakɪ}}
