/* Translations */ Added Ojibwe translation. <island#61291493>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -246,6 +246,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Nottoway-Meherrin: {{t|nwy|eohtessieh}}
 * Novial: {{t|nov|isle}}
 * Occitan: {{t+|oc|illa|f}}, {{t+|oc|iscla|f}}
+* Ojibwe: {{t|oj|minis}}
 * Okinawan: {{t|ryu|島|tr=しま, shima}}
 * Old Church Slavonic: {{t|cu|отокъ|m}}
 *: Cyrillic: {{t|cu|островъ|m}}
