Reverted edits by [[Special:Contributions/172.117.97.98|172.117.97.98]]. If you think this rollback is in error, please leave a message on my [[User talk:SemperBlotto|talk page]]. <pile of shit#61292859>

--- a/en/p/pile of shit.742053.wikitext
+++ b/en/p/pile of shit.742053.wikitext
@@ -10,8 +10,8 @@
 #: ''They said he survived the fall? What a '''pile of shit'''!''
 # {{lb|en|vulgar|slang}} Any worthless structure or device.
 #: ''Take this '''pile of shit''' back where you bought it and get your money back.''
-# {{lb|en|vulgar|slang}} A totally worthless person. ie: mac317 Pfeffer a resident in the virtual world of Secondlife
-#: ''Mac317, you are the biggest '''pile of shit''' I've ever seen.''
+# {{lb|en|vulgar|slang}} A totally worthless person.
+#: ''Dude, you are the biggest '''pile of shit''' I've ever seen.''
 
 ====Synonyms====
 *[[load of crap]]
