--- a/en/a/Ancestor Night.741683.wikitext
+++ b/en/a/Ancestor Night.741683.wikitext
@@ -6,7 +6,7 @@
 ===Proper noun===
 {{en-proper noun|head=[[ancestor|Ancestor]] [[Night]]}}
 
-# {{lb|en|paganism|and|Heathenry}} A festival celebrated by followers of [[Heathenry]] in late October or early November and based on the Germanic tradition of ancestor worship.
+# {{lb|en|Germanic paganism}} A festival celebrated by followers of [[Heathenry]] in late October or early November and based on the Germanic tradition of ancestor worship.
 #* '''1991''', D J Conway, ''Norse Magic'' (Llewellyn Publications), page 51:
 #*: This is '''Ancestor Night''', the Feast of the Dead, the night strongest for communication with those gone into the shadow lands, those who now dwell over Bifrost, the Rainbow Bridge to Asgard.
 #* {{quote-text|en|year=1999|author=Gail Duff|title=The Wheel of the Wiccan Year|page=23|passage=Other names are the Festival of Remembrance, the Feast of Apples, '''Ancestor Night''' or the Feast of the Dead.}}
