--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -6,6 +6,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 
 ===Pronunciation===
 * {{IPA|en|/ˈbliːd/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-bleed.wav|Audio (RP)}}
 * {{rhymes|en|iːd}}
 
 ===Verb===
