--- a/en/b/befallen.6783.wikitext
+++ b/en/b/befallen.6783.wikitext
@@ -51,7 +51,7 @@ From {{affix|de|be-|fallen}}.
 ===Verb===
 {{head|sv|verb form}}
 
-# {{lb|sv|nonstandard}} {{sv-verb-form-past|befalla}}
+# {{lb|sv|nonstandard}} {{sv-verb-form-pastpart|befalla}}
 #:{{syn|sv|befalld}} {{q|standard}}
 
 ====Declension====
