--- a/en/h/hamel.855583.wikitext
+++ b/en/h/hamel.855583.wikitext
@@ -13,7 +13,7 @@
 ==Dutch==
 
 ===Etymology===
-From {{inh|nl|dum|hamel}}, from {{inh|nl|gem-pro|*hamalaz|t=mutilated, castrated}}. Further origin uncertain; perhaps related to {{m|nl|ham||bacon}}.
+From {{inh|nl|dum|hamel}}, from {{inh|nl|gem-pro|*hamalaz|t=mutilated, castrated}}. Cognate with {{cog|de|Hammel}}. Further origin uncertain; perhaps related to {{m|nl|ham||bacon}}.
 
 ===Pronunciation===
 * {{IPA|nl|/ˈɦaː.məl/}}
