/* Descendants */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <at#61320550>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -772,6 +772,7 @@ From {{inh|enm|ang|æt}}.
 =====Descendants=====
 * {{desc|en|at}}
 * {{desc|sco|at}}
+* {{desc|yol|adh}}
 
 ====References====
 * {{R:MED Online|at|prep|MED2734}}
