--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -157,12 +157,16 @@ From {{inh|pt|roa-opt|mundo}}, from {{inh|pt|la|mundus||world}}.
 
 # {{senseid|pt|universe}} {{lb|pt|uncountable|with article '''{{l|pt|o}}'''}} {{l|en|world}} {{gloss|the Universe}}
 #: {{ux|pt|A Terra é o melhor planeta do '''mundo'''.|The Earth is the best planet in the '''world'''.}}
+#: {{syn|pt|universo}}
 # {{senseid|pt|Earth}} {{lb|pt|uncountable|with article '''{{l|pt|o}}'''}} {{l|en|world}} {{gloss|the Earth}}
 #: {{ux|pt|A maior parte do '''mundo''' é coberta por água.|Most of the '''world''' is covered by water.}}
+#: {{syn|pt|globo|Terra}}
 # {{senseid|pt|humanity}} {{lb|pt|uncountable|with article '''{{l|pt|o}}'''}} {{l|en|world}}; {{l|en|humanity}} {{gloss|human beings collectively}}
 #: {{ux|pt|O '''mundo''' inteiro viu aquilo.|The whole '''world''' saw that.}}
+#: {{syn|pt|homem|humanidade}}
 # {{senseid|pt|everything related to a certain field}} {{l|en|world}} {{gloss|everything related to a certain field}}
 #: {{ux|pt|Habilidade é importante no '''mundo''' da música.|Skill is important in the '''world''' of music.}}
+#: {{syn|pt|universo}}
 # {{senseid|pt|large region}} {{l|en|world}} {{gloss|a large, distinct region}}
 #: {{ux|pt|Para os europeus do século XV, a América era um novo '''mundo'''.|For 15th century Europeans, America was a new '''world'''.}}
 #: {{ux|pt|Por enquanto, Marte é um '''mundo''' inabitado.|t=Mars is currently an uninhabited world.}}
@@ -171,12 +175,6 @@ From {{inh|pt|roa-opt|mundo}}, from {{inh|pt|la|mundus||world}}.
 
 ====Quotations====
 {{seeCites|pt}}
-
-====Synonyms====
-* {{sense|the Universe}} {{l|pt|universo}}
-* {{sense|Earth}} {{l|pt|globo}}, {{l|pt|Terra}}
-* {{sense|humanity}} {{l|pt|homem}}, {{l|pt|humanidade}}
-* {{sense|everything related to a certain field}} {{l|pt|universo}}
 
 ====Derived terms====
 * {{l|pt|mundinho}}, {{l|pt|mundozinho}} {{gloss|diminutives}}
