--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -13,7 +13,7 @@
 * {{l|en|weazel}} {{qual|archaic}}
 
 ===Etymology===
-From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*wisulǭ}}. The verb comes from the supposed [[cunningness]] of the weasel.
+From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*wisulā}}, from {{inh|en|gem-pro|*wisulǭ}}. The verb comes from the supposed [[cunningness]] of the weasel.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈwiːz(ə)l/}}
