--- a/en/i/interruptor.803301.wikitext
+++ b/en/i/interruptor.803301.wikitext
@@ -39,11 +39,9 @@ Borrowed from {{bor|pt|LL.|interruptor}}, from {{der|pt|la|interrumpo}}.
 {{pt-noun|m|es}}
 
 # [[interrupter]] (that which interrupts)
+#: {{syn|pt|interrompedor}}
 # [[switch]] (device to turn electric current on and off or direct its flow)
-
-====Synonyms====
-* {{sense|that which interrupts}} {{l|pt|interrompedor}}
-* {{sense|device}} {{l|pt|comutador}}
+#: {{syn|pt|comutador}}
 
 ====Related terms====
 * {{l|pt|interromper}},
