--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -430,6 +430,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Latvian: {{tt+|lv|cūka|f}}
 {{trans-mid}}
 * Macedonian: {{tt|mk|свиња|f}}
+* Polish: {{t+|pl|świntuch|m}}
 * Portuguese: {{tt+|pt|porco|m}}, {{tt+|pt|nojento|m}}
 * Romanian: {{tt+|ro|porc|m}}
 * Russian: {{tt+|ru|свинья́|f}}
