t+grc:[[καὶ ὥς]] ([[WT:EDIT|Assisted]]) <even so#61332998>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -36,6 +36,7 @@
 * Finnish: {{t|fi|siitä huolimatta}}
 * French: {{t+|fr|quand même}}
 * Greek: {{t|el|εντούτιος}}
+*: Ancient: {{t|grc|καὶ ὥς}}
 * Hebrew: {{t|he|בְּכָל זֹאת|tr=bekhol zot|sc=Hebr}}
 {{trans-mid}}
 * Irish: {{t|ga|mar sin féin}}
