--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -36,7 +36,7 @@
 * Finnish: {{t|fi|siitä huolimatta}}
 * French: {{t+|fr|quand même}}
 * Greek: {{t|el|εντούτιος}}
-*: Ancient: {{t|grc|καὶ ὥς}}
+*: Ancient: {{t|grc|καὶ [[ὡς]]}}
 * Hebrew: {{t|he|בְּכָל זֹאת|tr=bekhol zot|sc=Hebr}}
 {{trans-mid}}
 * Irish: {{t|ga|mar sin féin}}
