--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -6,6 +6,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 
 ===Pronunciation===
 * {{IPA|en|/ˈpəʊlkæt/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-polecat.wav|Audio (RP)}}
 
 ===Noun===
 {{en-noun}}
