--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -706,7 +706,7 @@ From {{inh|ga|sga|attaid|t=swells, dilates, increases|pos=v}}, from {{m|sga|att|
 From {{der|lld|la|actus}}.
 
 ===Noun===
-{{lld-nounbruh|m|ac}}
+{{lld-noun|m|ac}}
 
 # [[act]]
 # [[action]]
