--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -13,9 +13,10 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|b
 ===Noun===
 {{en-noun|~}}
 
-# A [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem, all of which are in the {{taxlink|Bambuseae|tribe}} tribe.
-# The wood of the bamboo plant as a material or [[cane]].
-# A [[didgeridoo]].
+# A fast-growing [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem, all of which are in the {{taxlink|Bambuseae|tribe}} tribe.
+# {{lb|en|uncountable}} The wood of the bamboo plant as a material for building, furniture, etc.
+# {{lb|en|countable}} A stick, rod, pole, or cane of bamboo, especially one used for [[corporal punishment]].
+# {{lb|en|slang}} A [[didgeridoo]].
 # {{lb|en|slang}} A member of the [[British]] [[military]] or [[British East India Company]] who spent so much time in Indonesia, India, or Malaysia that they never went back home.
 
 ====Derived terms====
