--- a/en/b/beetling.855679.wikitext
+++ b/en/b/beetling.855679.wikitext
@@ -14,5 +14,6 @@
 {{en-adj|-}}
 
 # Jutting or protruding, especially of a person's brows.
+#* {{quote-book|1=en|year=1912|author=Sir Arthur Conan Doyle|authorlink=Arthur Conan Doyle|title=The Lost World|url=http://www.gutenberg.org/cache/epub/139/pg139.txt|passage=The '''beetling''' head of the cliff projected over the cane-brake.}}
 #* '''1995''', Iain Banks, ''Whit''
 #*: If the fire, with its giant black kettle swung over the flames, is our never-extinguished shrine, then the stove is an altar. It is habitually tended by my step-aunt Calliope (usually known as Calli), a dark, stocky, dense-looking woman with '''beetling''' black brows and a tied-back sheaf of thick hair, still raven-black without a trace of silver after her forty-four years.
