--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -138,7 +138,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Lithuanian: {{t-needed|lt}}
 * Persian: {{t+|fa|سوت|tr=sut}}
 * Polish: {{t+|pl|gwizd|m}}, {{t+|pl|świst|m}}
-* Portuguese: {{t|pt|apitada|f}} {{qualifier|with a whistle}}, {{t|pt|assoviada}}, {{t|pt|assobiada}} {{qualifier|with one’s mouth}}
+* Portuguese: {{t|pt|apitada|f}} {{qualifier|with a whistle}}, {{t|pt|assoviada}}, {{t|pt|assobiada}} {{qualifier|with one’s mouth}}, {{t+|pt|apito|m}}, {{t+|pt|assovio|m}}, {{t+|pt|assobio|m}}
 * Romanian: {{t|ro|fluierare|f}}, {{t+|ro|fluierat|n}}, {{t|ro|fluierătură|f}}
 * Russian: {{t+|ru|свист|m}}, {{t+|ru|свисто́к|m}}
 * Serbo-Croatian:
