--- a/en/s/summable.855773.wikitext
+++ b/en/s/summable.855773.wikitext
@@ -6,7 +6,10 @@
 ===Adjective===
 {{en-adj|-}}
 
-# {{lb|en|mathematics|of a function}} Having a [[Lebesgue integral]]
+# Able to be [[sum]]med (able to be [[add]]ed); that is, able to be [[sum up|summed up]] (able to be [[add up|added up]]); thus: 
+## [[addible|Addible]]. 
+## Able to be [[summarize]]d; [[summarizable]]. 
+# {{lb|en|mathematics|of a function}} Having a [[Lebesgue integral]].
 
 ====Translations====
 {{trans-top|having a Lebesgue integral}}
