/* Noun */ improved quotes <dawn of a new day#61368258>

--- a/en/d/dawn of a new day.855454.wikitext
+++ b/en/d/dawn of a new day.855454.wikitext
@@ -8,11 +8,8 @@
 
 # {{lb|en|idiomatic}} A new [[beginning]]; a [[fresh]] [[start]]; an [[important]], [[promising]] [[turning point]].
 #: {{synonyms|en|new dawn}}
-#* '''1881''', [[w:Georg_Ebers|Georg Ebers]], ''The Emperor (Der Kaiser)'' trans. Clara Bell, ch. 15,
-#*: A distant gleam shone through the weight of his troubles, seeming to promise the '''dawn of a new day'''.
-#* '''1914''', [[w:H._G._Wells|H. G. Wells]], "The World Set Free," section 8.
-#*: This—this is the '''dawn of a new day''' in human living.
-#* '''2007''', Michael Cusenza, "[https://web.archive.org/web/20080102131535/http://www.queenstribune.com/news/1196349721.html New Leader Selected For Queens Chamber]," ''Queens Tribune Online'', 29 Nov.,
-#*: It’s the '''dawn of a new day'''—a new era, even—for the Queens Chamber of Commerce.
+#* {{quote-book|en|year=1881|author={{w|Georg Ebers}}|trans-title=The Emperor|title=Der Kaiser|trans-author=Clara Bell|chapter=15|text=A distant gleam shone through the weight of his troubles, seeming to promise the '''dawn of a new day'''.}}
+#* {{quote-book|en|year=1914|author={{w|H. G. Wells}}|title="The World Set Free"|section=section 8|text=This—this is the '''dawn of a new day''' in human living.}}
+#* {{quote-journal|en|date=29 November 2007|author=Michael Cusenza|url=https://web.archive.org/web/20080102131535/http://www.queenstribune.com/news/1196349721.html|title=New Leader Selected For Queens Chamber|work=Queens Tribune Online|text=It’s the '''dawn of a new day'''—a new era, even—for the Queens Chamber of Commerce.}}
 
 {{C|en|Day}}
