--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -19,7 +19,7 @@
 * Irish: {{t|ga|altaigh}}
 {{trans-mid}}
 * Portuguese: {{t|pt|dar graças}}
-* Russian: {{t|ru|[[проче́сть]] [[молитва|моли́тву]] ([[пе́ред]] [[еда|едо́й]])|pf}}
+* Russian: {{t|ru|[[проче́сть]] [[молитва|моли́тву]] [<nowiki/>[[пе́ред]] [[еда|едо́й]]]|pf}}
 * Spanish: {{t|es|bendecir la mesa}}, {{t|es|dar gracias}}
 * Swedish: {{t|sv|[[be]] [[bordsbön]]}}
 {{trans-bottom}}
