t+it:[[rendere grazie]] ([[WT:EDIT|Assisted]]) <say grace#61370699>

--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -18,6 +18,7 @@
 * German: {{t|de|[[das]] [[Tischgebet]] [[sprechen]]}}
 * Irish: {{t|ga|altaigh}}
 {{trans-mid}}
+* Italian: {{t|it|rendere grazie}}
 * Portuguese: {{t|pt|dar graças}}
 * Russian: {{t|ru|[[проче́сть]] [[молитва|моли́тву]] [<nowiki/>[[пе́ред]] [[еда|едо́й]]]|pf}}
 * Spanish: {{t|es|bendecir la mesa}}, {{t|es|dar gracias}}
