--- a/en/r/Rayne.774571.wikitext
+++ b/en/r/Rayne.774571.wikitext
@@ -24,4 +24,6 @@
 ===Anagrams===
 * {{anagrams|en|a=aenry|Aeryn|Arney|Neary|Neyra|Raney|Yaren|aryne|renay|yarne|yearn}}
 
+[[Category:en:Heterosexual ships (fandom)]]
 [[Category:en:Ships (fandom)]]
+[[Category:en:Ships with portmanteau names (fandom)]]
