--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -57,6 +57,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 #: {{ux|en|The three novels were '''bound''' together.}}
 # {{lb|en|transitive|chemistry}} To make two or more elements stick together.
 # {{lb|en|transitive|computer programming}} To associate an [[identifier]] with a value; to associate a variable name, method name, etc. with the content of a storage location.
+# {{lb|en|transitive|computer programming}} To process one or more object modules into an executable program.
 #* '''2008''', Bryan O'Sullivan, John Goerzen, Donald Bruce Stewart, ''Real World Haskell'' (page 33)
 #*: We '''bind''' the variable <code>n</code> to the value <code>2</code>, and <code>xs</code> to <code>"abcd"</code>.
 #* {{quote-book|en|year=2009|author=Robert Pickering|title=Beginning F#|page=123|passage=You can '''bind''' an identifier to an object of a derived type, as you did earlier when you bound a string to an identifier of type <code>obj</code>{{...}}}}
