--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -57,6 +57,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #: {{ux|en|We '''blew''' an opportunity to get benign corporate sponsorship.}}
 # {{lb|en|transitive|vulgar}} To [[fellate]]; to perform [[oral sex]] on (usually a man)
 #: {{ux|en|Who did you have to '''blow''' to get those backstage passes?}}
+#:{{synonyms|en|Thesaurus:give head}}
 # {{lb|en|transitive|slang}} To [[leave]], especially suddenly or in a hurry.
 #: {{ux|en|Let's '''blow''' this joint.}}
 # To make [[flyblown]], to defile, especially with fly eggs.
