t+ppi:[[xlo]] ([[WT:EDIT|Assisted]]) <rabbit#61395852>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -198,6 +198,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Old Tupi: {{t|tpw|tapiti}}
 * Oroqen: {{t|orh|tʊkʃakɪ}}
 * Ossetian: {{t-needed|os}}
+* Paipai: {{t|ppi|xlo}}
 * Pashto: {{t|ps|سوۍ|tr=saway|sc=ps-Arab}}
 * Persian: {{t+|fa|خرگوش|tr=xarguš|sc=fa-Arab}}
 * Pintupi-Luritja: {{t-needed|piu}}
