--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1261,5 +1261,13 @@ Cognate with {{cog|yai|ашт}}.
 {{head|yol|conjunction}}
 # [[that]], [[which]]
 
+===Determiner===
+{{head|yol|determiner}}
+# [[that]]
+
+===Verb===
+{{head|yol|verb}}
+# [[eat]]
+
 ===References===
 * J. Poole W. Barnes, ''A Glossary, with Some Pieces of Verse, of the Old Dialect of the English Colony in the Baronies of Forth and Bargy'' (1867)
