--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -244,11 +244,10 @@ From {{inh|fr|fro|dame}}, from {{inh|fr|LL.|domna}}, shortened variant of {{inh|
 # {{lb|fr|card games}} {{l|en|queen}}
 
 ====Usage notes====
-
 Occasionally, in very formal or official registers, ''dame'' can be used as a title with a woman's name, for example ''dame Jeanne Dupont''. Normal usage would be ''Madame Jeanne Dupont.''
 
 ====Synonyms====
-* {{l|fr|de|d<sup>e</sup>}}
+* {{l|fr|de|d<sup>e</sup>}}, {{l|fr|lady}}, {{l|fr|madame}}
 
 ====Derived terms====
 * {{l|fr|dame d'attendre}}
@@ -257,12 +256,12 @@ Occasionally, in very formal or official registers, ''dame'' can be used as a ti
 * {{l|fr|jeu de dames}}
 * {{l|fr|madame}}
 
+====Descendants====
+* {{desc|pl|dama|bor=1}}
+
 ===See also===
 {{table:chess pieces/fr}}
 {{table:playing cards/fr}}
-
-====Descendants====
-* {{desc|pl|dama|bor=1}}
 
 ===Further reading===
 * {{R:TLFi}}
