--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -21,7 +21,7 @@ From {{suffix|en|bend|t}}.
 # {{lb|en|colloquial|chiefly|UK}} [[corrupt]], [[dishonest]]
 # {{lb|en|derogatory|colloquial|chiefly|UK}} [[homosexual|Homosexual]].
 # [[determined|Determined]] or [[insistent]].
-#: {{syn|en|hellbent}}
+#: {{syn|en|hell-bent}}
 #: {{ux|en|He was '''bent''' on going to Texas, but not even he could say why.}}
 #: {{ux|en|They were '''bent''' on mischief.}}
 #* {{quote-journal|en|date=July 7, 2017|author=Ignatiy Vishnevetsky| title=The ambitious War For The Planet Of The Apes ends up surrendering to formula| work=The Onion AV Club| url=http://www.avclub.com/review/ambitious-war-planet-apes-ends-surrendering-formul-257757| passage={{...}}in the ape posse, '''bent''' on vengeance, traversing landscapes clothed in snow and bristling with California red fir and silver pine, spooking human stragglers, and running across fresh graves as they search for the nameless colonel and try to piece together why the humans are killing each other. }}
