--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -136,9 +136,9 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Albanian: {{t+|sq|send|m}}
 * Amharic: {{t|am|ነገር|sc=Ethi}}
 * Arabic: {{t+|ar|شَيْء|m}}, {{t+|ar|أَمْر|m}}
-*: Egyptian Arabic: {{t|arz|شيء|m|tr=šēʾ|sc=Arab}}, {{t|arz|حاجة|f|tr=ḥāga|sc=Arab}}
-*: Hijazi Arabic: {{t|acw|شي|m|tr=šay|sc=Arab}}, {{t|acw|حاجة|f|tr=ḥāja|sc=Arab}}
-*: Moroccan Arabic: {{t|ary|شْي|m|tr=ši}}, {{t|ary|حاجة‎|f|tr=ḥæʒa}}
+*: Egyptian Arabic: {{t|arz|حاجة|f|tr=ḥāga}}
+*: Hijazi Arabic: {{t|acw|شي|m|tr=šay}}, {{t|acw|حاجة|f|tr=ḥāja}}
+*: Moroccan Arabic: {{t|ary|حاجة‎|f|tr=ḥāja}}, {{t|ary|شي|m|tr=šī}}, {{t|ary|شي|m|tr=šayy}}
 * Aragonese: {{t|an|cosa|f}}
 * Armenian: {{t+|hy|իր}}, {{t+|hy|բան}}
 * Assamese: {{t|as|বস্তু}}
