t+ary:[[ستون]] ([[WT:EDIT|Assisted]]) <thing#61432574>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -138,7 +138,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Arabic: {{t+|ar|شَيْء|m}}, {{t+|ar|أَمْر|m}}
 *: Egyptian Arabic: {{t|arz|حاجة|f|tr=ḥāga}}
 *: Hijazi Arabic: {{t|acw|شي|m|tr=šay}}, {{t|acw|حاجة|f|tr=ḥāja}}
-*: Moroccan Arabic: {{t|ary|حاجة‎|f|tr=ḥāja}}, {{t|ary|شي|m|tr=šī}}, {{t|ary|شي|m|tr=šayy}}
+*: Moroccan Arabic: {{t|ary|حاجة‎|f|tr=ḥāja}}, {{t|ary|شي|m|tr=šī}}, {{t|ary|شي|m|tr=šayy}}, {{t|ary|ستون|m|tr=stūn}} {{qualifier|slang}}
 * Aragonese: {{t|an|cosa|f}}
 * Armenian: {{t+|hy|իր}}, {{t+|hy|բան}}
 * Assamese: {{t|as|বস্তু}}
