--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -129,6 +129,7 @@ From {{der|zh|en|CD}}.
 {{zh-noun}}
 
 # [[#English|CD]], [[compact disk]] {{zh-mw|m:張}}
+#* {{zh-x|給 你 一 張 過去 的 CD @&nbsp;/&nbsp; 聽 聽 那時 我們 的 愛情|ref='''2011''', {{lang|zh|柯肇雷}} (Ke Zhaolei) (lyrics and music), {{w2|zh|因为爱情 (歌曲)|因为爱情|pref=《|suf=》}}}}
 
 ====Derived terms====
 {{zh-der|CD機|CD播放器|CD播放機}}
