/* Pronunciation */Added IPA <rot#61462214>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -637,6 +637,7 @@ From {{inh|pdc|goh|rōt}}, from {{inh|pdc|gmw-pro|*raud}}, from {{inh|pdc|gem-pr
 From {{inh|sv|gmq-osw|rot|rōt}}, from {{inh|sv|non|rót}}, from {{inh|sv|gem-pro|*wrōts}}, from {{inh|sv|ine-pro|*wréh₂ds}}.
 
 ===Pronunciation===
+* {{IPA|sv|/ruːt/}}
 * {{audio|sv|Sv-en rot.ogg|audio}}
 
 ===Noun===
