--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -220,6 +220,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
 {{trans-mid}}
+* Indonesian: {{t+|id|pemberat}}
 * Interlingue: {{t|ie|pesa}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t+|ja|重り|tr=omori}}
