/* Pronunciation */ added second pronunciation; split IPA and added additional rhyme option <qua#61472865>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -5,9 +5,13 @@
 From {{bor|en|la|quā||in the capacity of}}.
 
 ====Pronunciation====
-* {{IPA|en|/kwɑː/|/kweɪ/}}
-* {{rhymes|en|eɪ}}
-* {{audio|en|En-us-qua.ogg|Audio (US)}}
+* {{IPA|en|/kwɑː/|}}
+*: {{rhymes|en|ɑː}}
+*: {{audio|en|En-us-qua.ogg|Audio (US)}}
+
+* {{IPA|en|/kweɪ/}}
+*: {{rhymes|en|eɪ}}
+*: {{audio|en|En-us-qua2.ogg|Audio (US)}}
 
 ====Preposition====
 {{en-prep}}
