t+skr:[[ادڑ]] ([[WT:EDIT|Assisted]]) <otter#61475323>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -132,6 +132,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * Russian: {{t+|ru|вы́дра|f}}
 * Sanskrit: {{t+|sa|उद्र|m}}
 * Santali: {{t|sat|ᱚᱫᱟᱢ}}, {{t|sat|ᱩᱫᱟᱢ}}
+* Saraiki: {{t|skr|اُدڑ|m|tr=udṛ}}
 * Sardinian: {{t|sc|lontra|?}}
 * Scottish Gaelic: {{t|gd|dòbhran|m}}
 * Serbo-Croatian:
