/* Phrase */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <uit de kluiten gewassen#61476906>

--- a/en/u/uit de kluiten gewassen.4472.wikitext
+++ b/en/u/uit de kluiten gewassen.4472.wikitext
@@ -9,7 +9,7 @@ Literally, “grown out of the clods”. Earliest known Dutch usage in the begin
 ===Phrase===
 {{head|nl|phrase}}
 
-# [[strapping]]
+# [[strapping]], of [[considerable]] [[size]]
 #: ''een uit de [[kluit]]en ge[[wassen]] [[kerel]]'': a strapping lad
 
 ===References===
