/* Translations */ added cherokee translation <cop#61481746>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -95,6 +95,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Belarusian: {{t|be|мент|m}}
 * Bulgarian: {{t+|bg|полицай|m}}, {{t+|bg|ченге|n}}
 * Catalan: {{t+|ca|bòfia|f}}
+* Cherokee: {{t|chr|ᏗᏓᏂᏱᏍᎩ}}
 * Chinese:
 *: Mandarin: {{t+|cmn|条子|tr=tiáozǐ |sc=Hani}}
 * Czech: {{t+|cs|polda|m}}, {{t+|cs|policajt|m}}, {{t+|cs|bachař|m}}
