--- a/en/b/barbera.745859.wikitext
+++ b/en/b/barbera.745859.wikitext
@@ -5,7 +5,7 @@
 From {{bor|en|it|barbera}}.
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
 
 # An Italian grape variety grown for use in [[red wine]], or a wine made from such grapes.
 #* {{quote-journal|en|date=May 9, 2003|author=Laura Levy Shatkin|title=Wine and Dine|work=Chicago Reader|url=https://securesite.chireader.com/cgi-bin/Archive/abridged2.bat?path=2003/030509/RESTBOX
