/* Verb */ # {{lb|en|intransitive}} To live together in a crowded filthy manner. <pig#61487445>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -530,6 +530,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #* '''2009''', Thomas Pynchon, ''Inherent Vice'', Vintage 2010, page 349:
 #*: "Wow, Doc. That's heavy." Denis sat there '''pigging''' on the joint as usual.
 # {{lb|en|intransitive}} To [[huddle]] or [[lie]] [[together]] like pigs, in one [[bed]]. <!--Webster 1913-->
+# {{lb|en|intransitive}} To live together in a crowded filthy manner.
 # {{lb|en|transitive|engineering}} To clean (a [[pipeline]]) using a pig {{qf|the device}}.
 
 ===Etymology 2===
