--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -2,6 +2,13 @@
 ==English==
 {{wikipedia|dab=thing}}
 
+===Alternative forms===
+* {{alter|en|thang||slang|pronunciation spelling|usually used to denote a known fad or popular activity}}
+* {{alter|en|thin'||informal|pronunciation spelling}}
+* {{alter|en|thinge||archaic}}
+* {{alter|en|thynge||obsolete}}
+* {{alter|en|ting||Caribbean creoles, MLE}}
+
 ===Etymology===
 From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þingą}}; compare {{cog|fy|ding}}, {{cog|nds|Ding}}, {{cog|nl|ding}}, {{cog|de|Ding}}, {{cog|sv|-}}, {{cog|da|-}} and {{cog|no|ting}}. The word originally meant "assembly", then came to mean a specific issue discussed at such an assembly, and ultimately came to mean most broadly "an object". Compare {{noncog|la|rēs}}, also meaning "legal matter", and same transition from {{noncog|la|causa||legal matter}} to "thing" in Romance languages. Modern use to refer to a Germanic assembly is likely influenced by cognates (from the same Proto-Germanic root) like {{cog|non|þing||thing}}, {{m+|sv|ting}}, and {{cog|goh|ding}} with this meaning.
 
