--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -202,6 +202,8 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 # {{lb|en|ambitransitive}} To (cause to) swell up like a [[cauliflower ear]].
 #* '''1947''', Elliott Chaze, ''The Stainless Steel Kimono'' (page 49)
 #*: I noticed his right ear was badly '''cauliflowered''' and that explained a number of things. It wasn't a new job of '''cauliflowering'''.
+#* '''1960''', ''Transactions of the British Ceramic Society'' (page 281)
+#*: Returning to your first point, the '''cauliflowering''' of magnesite bricks — we presume that this is due to your using high concentrations of oxygen for blowing the furnace, giving high checker-temperatures.
 #* '''1974''', Alexander G. Weygers, ''The Modern Blacksmith'' (page 39)
 #*: The soft steel of the back edge by now has '''cauliflowered''' over from hammering on it.
 
