--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -13,6 +13,7 @@
 {{head|en|numeral}}
 
 # {{lb|en|US|modern|_|British|_|&|_|Australian|[[w:Long and short scales|short scale]]}} A [[thousand]] [[trillion]] [[trillion]], a [[billion]] [[billion]] [[billion]]: 1 followed by 27 zeros, 10<sup>27</sup>.
+#* {{quote-book|en|year=2019|author=[[w:Bill Bryson|Bill Bryson]]|title=The Body: A Guide for Occupants|publisher=Black Swan (2020)|pages=5-6|passage=Altogether it takes seven billion billion billion (that’s 7,000,000,000,000,000,000,000,000,000, or seven '''octillion''') atoms to make you.}}
 # {{lb|en|dated|_|British|_|&|_|Australian|[[w:Long and short scales|long scale]]}} A [[trillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
 ====Synonyms====
