t+fa:[[دمیدن]] ([[WT:EDIT|Assisted]]) <blow#61525702>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -294,6 +294,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Irish: {{t|ga|séid}}
 * Mongolian: {{t+|mn|үлээх}}
 * Ngazidja Comorian: {{t|zdj|pvuzia|alt=upvuzia}}
+* Persian: {{t+|fa|دمیدن|tr=damīdan}}
 * Polish: {{t+|pl|dąć|impf}}, {{t|pl|zadąć|pf}}, {{t+|pl|dmuchać|impf}}, {{t+|pl|dmuchnąć|pf}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|assoprar}}
