--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -183,6 +183,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Ngazidja Comorian: {{t|zdj|ra|alt=hura}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|blä}}
 * Old Frisian: {{t|ofs|blā}}
+* Persian: {{t+|fa|وزیدن|tr=vazīdan}}
 * Polish: {{t+|pl|dmuchać|impf}}, {{t+|pl|dąć|impf}}, {{t+|pl|wiać|impf}}
 * Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}, {{t+|pt|bufar}}
 * Quechua: {{t|qu|phukuy}}, {{t|qu|wayray}}
