--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -486,7 +486,7 @@ Borrowed from {{bor|ro|hu|kín}}.
 ===Noun===
 {{es-noun|m|chines}}
 
-# {{lb|es|regional|Puerto Rico|Dominican Republic}} small amount
+# {{lb|es|Dominican Republic|Puerto Rico}} small amount
 #: {{ux|es|Dame un '''chin''' de café.|Give me a little coffee.}}
 #: {{syn|es|poco}}
 
