--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -14,6 +14,7 @@ From {{inh|en|enm|plege}}, from {{der|en|xno|plege}}, from {{der|en|fro|plege}} 
 {{en-verb}}
 
 # To make a [[solemn]] [[promise]] (to do something).
+#: {{ux|en|''pledge''' allegiance to the flag}}
 # To [[deposit]] something as a [[security]]; to [[pawn]].
 # {{lb|en|transitive}} To give assurance of friendship by the act of drinking; to drink to one's health.
 #* '''1773''', [[w:Oliver Goldsmith|Oliver Goldsmith]], ''[[s:She Stoops to Conquer|She Stoops to Conquer]]''
