t+sv:[[hjärtevän]] ([[WT:EDIT|Assisted]]) <bosom friend#61544278>

--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -33,6 +33,7 @@
 * Scottish Gaelic: {{t|gd|goistidh|m}} {{qualifier|male}}, {{t|gd|bana-ghoistidh|m}} {{qualifier|female}}
 * Serbo-Croatian: {{t|sh|naprsnik|m}}
 * Spanish: {{t|es|amigo del alma|m}}, {{t|es|amiga del alma|f}}
+* Swedish: {{t|sv|hjärtevän|c}}
 * Vietnamese: {{t+|vi|tri kỷ}}
 {{trans-bottom}}
 
