/* English */ <money bag#61545184>

--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -50,5 +50,5 @@
 ===Anagrams===
 * {{anagrams|en|a=abegmnoy|bogey man|bogeyman}}
 
-[[Category:en:Containers]]
+[[Category:en:Bags]]
 [[Category:en:Money]]
