--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -121,7 +121,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}},{{m|enm|ayain}}, {{m|enm|ayen}}, {{m|
 * Burmese: {{t|my|နောက်တဖန်}}, {{t+|my|ထပ်}}, {{t+|my|ပြန်လှန်}}, {{t+|my|နောက်ထပ်}}
 * Catalan: {{t|ca|una altra vegada}}, {{t|ca|de nou}}, {{t|ca|un altre cop}}
 * Central Sierra Miwok: {{t|csm|ˀičáˀ}}
-* Cherokee: {{t|chr|ᎠᏏᏇ}}
+* Cherokee: {{t|chr|ᎠᏏᏇ}}, {{t|chr|ᏏᏊ}}
 * Chickasaw: {{t|cic|ano̠wa'}}
 * Chinese:
 *: Dungan: {{t|dng|зэ}}, {{t|dng|ю}}
