--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -17,7 +17,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 # A degree of [[certainty]].
 #: {{ux|en|It’s a safe '''bet''' that it will rain tomorrow.}}
 #: {{ux|en|There's a decent '''bet''' that we'll be able to reach the top of that hill in an hour.}}
-#: {{ux|en|It’s an even '''bet''' that Jim will come top of the maths test tomorrow.''}}
+#: {{ux|en|It’s an even '''bet''' that Jim will come top of the maths test tomorrow.}}
 
 =====Translations=====
 {{trans-top|a wager}}
