--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -206,11 +206,12 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 *: Dutch Low Saxon: {{t+|nds-nl|eilaand|n}}
 * Ludian: {{t|lud|suar'}}
 * Luganda: {{t|lg|ekizinga}}
-{{trans-mid}}
 * Luxembourgish: {{t|lb|Insel|f}}
 * Macedonian: {{t|mk|остров|m}}
+{{trans-mid}}
 * Malagasy: {{t+|mg|nosy}}
 * Malay: {{t|ms|pulau}}, {{t|ms|nusa}}
+*: Jawi: {{t|ms|ڤولاو}}, {{t|ms|نوسا}}
 * Malayalam: {{t+|ml|ദ്വീപ്}}
 * Maltese: {{t+|mt|gżira|f}}, {{t|mt|ġzira|f}}
 * Manx: {{t|gv|ellan|m|f}}, {{t|gv|innis|f}}, {{t|gv|innys|f}}, {{t|gv|insh|f}}
@@ -226,7 +227,9 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Miyako: {{t|mvi|島|tr=すま, suma}}
 * Mizo: {{t|lus|thliarkar}}
 * Moksha: {{t|mdf|цёнга}}
-* Mongolian: {{t+|mn|арал}}
+* Mongolian:
+*: Cyrillic: {{t+|mn|арал}}
+*: Uyghurjin: {{t|mn|ᠠᠷᠠᠯ}}
 * Mwani: {{t|wmw|kisirwa}}
 * Nahuatl: {{t|nah|tlālhuāctli}}
 * Nepali: {{t|ne|द्वीप|m}}, {{t|ne|टापू}}
@@ -249,8 +252,8 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Occitan: {{t+|oc|illa|f}}, {{t+|oc|iscla|f}}
 * Ojibwe: {{t|oj|minis}}
 * Okinawan: {{t|ryu|島|tr=しま, shima}}
-* Old Church Slavonic: {{t|cu|отокъ|m}}
-*: Cyrillic: {{t|cu|островъ|m}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|островъ|m}}, {{t|cu|отокъ|m}}
 * Old East Slavic: {{t|orv|островъ|m}}
 * Old English: {{t|ang|īeġ|f}}, {{t|ang|īeġland|n}}
 * Old French: {{t|fro|isle|f}}
@@ -259,7 +262,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Ossetian: {{t|os|сакъадах}}
 * Ottoman Turkish: {{t|ota|جزیره|tr=cezîre}}, {{t|ota|آدا|tr=ada}}, {{t|ota|جزائر|p|tr=cezâir}}
 * Pashto: {{t+|ps|ټاپو|m|tr=ṭâpú|sc=ps-Arab}}, {{t+|ps|جزيره|f|tr=ǰazirá}}
-* Persian: {{t+|fa|جزیره|tr=jazire|sc=fa-Arab}}, {{t+|fa|گنگ|tr=gang|sc=fa-Arab}}
+* Persian: {{t+|fa|جزیره|tr=jazire}}, {{t+|fa|گنگ|tr=gang}}
 * Phoenician: {{t|phn|𐤀𐤉}}
 * Pijin: {{t|pis|aelan}}
 * Pitcairn-Norfolk: {{t|pih|ailen}}
