--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -311,6 +311,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Norman: {{t|nrf|sûfflier}}
 * Norwegian: {{t|no|plystre}}
 * Occitan: {{t+|oc|siblar}}, {{t+|oc|fiular}}
+* Old English: {{t|ang|hwistlian}}
 * Persian: {{t+|fa|سوت زدن|tr=sut zadan}}
 * Pitjantjatjara: {{t|pjt|utinmananyi}}
 * Polish: {{t+|pl|gwizdać|impf}}, {{t+|pl|świstać|impf}}
