t+he:[[נרקב]] ([[WT:EDIT|Assisted]]) <rot#61564430>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -73,7 +73,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * German: {{t+|de|verrotten}}, {{t+|de|verderben}}, {{t+|de|faulen}}, {{t+|de|verfaulen}}
 * Greek: {{t+|el|σαπίζω}}
 *: Ancient: {{t|grc|[[σήπω|σήπομαι]]}}
-* Hebrew: {{t-needed|he}}
+* Hebrew: {{t|he|נרקב|m|tr=nirkáv}}
 * Hungarian: {{t+|hu|rohad}}, {{t+|hu|rothad}}
 * Italian: {{t+|it|marcire}}, {{t|it|putrefarsi}}
 * Japanese: {{t+|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
