--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -209,6 +209,9 @@ Borrowed from {{bor|da|ru|во́дка}}, diminutive of {{m|ru|вода́|t=wate
 ===Etymology===
 Borrowed from {{bor|fi|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
 
+===Pronunciation===
+{{fi-p}}
+
 ===Noun===
 {{fi-noun}}
 
