--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -162,7 +162,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Votic: {{t-needed|vot}}
 * Võro: {{t-needed|vro}}
 * Walloon: {{t+|wa|a}}
-* Welsh: {{t|cy|wrth}}, {{t+|cy|ger}}, {{t+|cy|yn}}
+* Welsh: {{sense|in}} {{t+|cy|yn}}, {{t+|cy|mewn}}; {{sense|near}} {{t|cy|wrth}}, {{t+|cy|ger}}
 * Zealandic: {{t|zea|bie}}, {{t|zea|in}}, {{t|zea|nessens}} {{q|alongside}}
 {{trans-bottom}}
 
@@ -296,6 +296,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Votic: {{t-needed|vot}}
 * Võro: {{t-needed|vro}}
 * Walloon: {{t+|wa|a}}
+* Welsh: {{t+|cy|at}}
 {{trans-bottom}}
 
 {{trans-top|denoting a price}}
@@ -340,6 +341,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Volapük: {{t-needed|vo}}
 * Votic: {{t-needed|vot}}
 * Võro: {{t-needed|vro}}
+* Welsh: {{t+|cy|am}}
 {{trans-bottom}}
 
 {{trans-top|occupied in (activity)}}
