t+nl:[[enkelvoudige zin]] ([[WT:EDIT|Assisted]]) <simple sentence#61596183>

--- a/en/s/simple sentence.741362.wikitext
+++ b/en/s/simple sentence.741362.wikitext
@@ -13,6 +13,7 @@
 * Armenian: {{t+|hy|պարզ նախադասություն}}
 * Chinese:
 *: Mandarin: {{t+|cmn|單句|sc=Hani}}, {{t+|cmn|单句|tr=dānjù|sc=Hani}}
+* Dutch: {{t|nl|enkelvoudige zin|m}}
 * French: {{t+|fr|phrase simple|f}}
 * German: {{t+|de|einfacher Satz|m}}
 * Hungarian: {{t|hu|egyszerű mondat}}
