--- a/en/s/simple sentence.741362.wikitext
+++ b/en/s/simple sentence.741362.wikitext
@@ -17,6 +17,7 @@
 * French: {{t+|fr|phrase simple|f}}
 * German: {{t+|de|einfacher Satz|m}}
 * Hungarian: {{t|hu|egyszerű mondat}}
+* Italian: {{t+|it|frase semplice|f}}
 * Japanese: {{t|ja|単文|tr=たんぶん, tanbun|sc=Jpan}}
 {{trans-mid}}
 * Korean: {{t+|ko|단문|sc=Kore}}, {{t|ko|단순문|sc=Kore}}
