--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -170,7 +170,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 {{trans-mid}}
 * Latvian: {{t|lv|trusis|m}}
 * Lithuanian: {{t+|lt|triušis|m}}
-* Livonian: {{t|liv|kuodkõps}}
+* Livonian: {{t|liv|kuodkõps}}, {{t|liv|truš }}
 * Low German:
 *: Low German: {{t|nds-de|Kanink|m|n}}, {{t|nds-de|Kaninken|m|n}}
 * Luxembourgish: {{t|lb|Kanéngchen|f}}
