--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -354,6 +354,8 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 {{trans-bottom}}
 
 {{trans-top|biology: taxonomic classification of plants}}
+* Chinese:
+*: Mandarin: {{t+|cmn|門|tr=mén}}
 * Czech: {{t+|cs|oddělení|f}}
 * Finnish: {{t+|fi|kaari}}, {{t+|fi|pääjakso}}
 * Icelandic: {{t|is|skipting|f}}, {{t+|is|fylking|f}}
