t+ja:[[保証]] ([[WT:EDIT|Assisted]]) <pledge#61618192>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -121,7 +121,7 @@ From {{inh|en|enm|plege}}, from {{der|en|xno|plege}}, from {{der|en|fro|plege}} 
 * Gothic: {{t|got|𐍄𐍂𐌹𐌲𐌲𐍅𐌰|f}}
 * Hungarian: {{t+|hu|fogadalom}}, {{t+|hu|ígéret}}, {{t+|hu|eskü}}
 * Italian: {{t+|it|giuramento|m}}, {{t+|it|pegno|m}}, {{t|it|promessa solenne|f}}
-* Japanese: {{t+|ja|抵当|tr=ていとう, teitō|sc=Jpan}}
+* Japanese: {{t+|ja|抵当|tr=ていとう, teitō|sc=Jpan}}, {{t+|ja|保証|tr=ほしょう, hoshō}}
 * Korean: {{t+|ko|서약}}, {{t+|ko|맹세}}, {{t+|ko|보증}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|پەیمان}}
