added [[Category:English 3-syllable words]] using [[Help:Gadget-HotCat|HotCat]] <helping hand#61618741>

--- a/en/h/helping hand.803463.wikitext
+++ b/en/h/helping hand.803463.wikitext
@@ -22,3 +22,5 @@
 * Swedish: {{t+|sv|handtag|n}}, {{t|sv|hjälpande hand|c}}
 * Welsh: {{t|cy|help llaw|m}}
 {{trans-bottom}}
+
+[[Category:English 3-syllable words]]
