t+cmn:[[抓住]] ([[WT:EDIT|Assisted]]) <seize#61620350>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -111,6 +111,8 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 {{trans-bottom}}
 
 {{trans-top|take advantage}}
+* Chinese:
+*: Mandarin: {{t+|cmn|抓住|tr=zhuāzhù}}
 * Czech: {{t|cs|chopit se|pf}} ''příležitosti''
 * Danish: {{t|da|gribe}}
 * Dutch: {{t+|nl|grijpen}}, {{t+|nl|aangrijpen}}
