t+cmn:[[沒收]] t+cmn:[[繳獲]] t+cmn:[[奪取]] ([[WT:EDIT|Assisted]]) <seize#61620403>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -129,6 +129,8 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 
 {{trans-top|take possession of (by force, law etc)}}
 * Catalan: {{t+|ca|confiscar}}
+* Chinese:
+*: Mandarin: {{t+|cmn|沒收|tr=mòshōu}}, {{t+|cmn|繳獲|tr=jiǎohuò}}, {{t+|cmn|奪取|tr=duóqǔ}}
 * Czech: {{t|cs|uchvátit}}, {{t+|cs|zabavit|pf}}, {{t|cs|zkonfiskovat}}
 * Danish: {{t|da|beslaglægge}}
 * Dutch: {{t|nl|in beslag nemen}}, {{t|nl|beslag leggen op}}
