Applied {{col3}}; added term <blow#61628121>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -86,47 +86,48 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|Scientology|intransitive}} To [[leave]] the [[Church of Scientology]] in an unauthorized manner.
 
 =====Derived terms=====
-{{der3|en|title=Terms derived from ''blow'' (verb)
-| beblow
-| blow a gasket
-| blow a kiss
-| blow apart
-| blow away
-| blow down
-| blower
-| blowhard
-| blow hot and cold
-| blowhorn
-| blow it
-| blow it out one's ass
-| blowjob
-| blow me
-| blow off
-| blow off steam
-| blow one's horn
-| blow one's nose
-| blow one's top
-| blow one's trumpet
-| blow out
-| blowout
-| blow over
-| blow someone out of the water
-| blow someone's brains out
-| blow someone's cover
-| blow someone's mind
-| blow someone's socks off
-| blow the whistle
-| blow up
-| blow upon
-| blowup
-| blow up in one's face
-| blowy
-| glassblower
-| inblow
-| mind-blowing
-| outblow
-| suck and blow
-| there she blows
+{{col3|en
+|beblow
+|blow a gasket
+|blow a kiss
+|blow apart
+|blow away
+|blow down
+|blower
+|blowhard
+|blow hot and cold
+|blowhorn
+|blow it
+|blow it out one's ass
+|blowjob
+|blow me
+|blow off
+|blow off steam
+|blow one's horn
+|blow one's nose
+|blow one's top
+|blow one's trumpet
+|blow out
+|blowout
+|blow over
+|blow someone out of the water
+|blow someone's brains out
+|blow someone's cover
+|blow someone's mind
+|blow someone's socks off
+|blow the whistle
+|blow to kingdom come
+|blow up
+|blow upon
+|blowup
+|blow up in one's face
+|blowy
+|glassblower
+|inblow
+|mind-blowing
+|outblow
+|suck and blow
+|there she blows
 }}
 
 =====Translations=====
