--- a/en/t/Touretter.741408.wikitext
+++ b/en/t/Touretter.741408.wikitext
@@ -1,12 +1,14 @@
 ==English==
 
 ===Etymology===
-{{suffix|en|Tourette|er}}
+{{suffix|en|Tourettes|er}}
 
 ===Noun===
 {{en-noun}}
 
 # A person who has [[Tourette syndrome]].
+#* {{quote-book|en|year=2012| title=Psychology in the Bathroom|author=Nick Haslam | page=| passage=Less frequently, '''Touretters''' may also perform obscene actions suchas making sexual gestures (copropraxia) or writing obscene material (coprographia) (Freeman et al., 2009). }}
+#* {{quote-book|en|year=2013| title=Holy Sh*t: A Brief History of Swearing|author=Melissa Mohr | page=| passage='''Touretters''' also occasionally suffer from copropraxia, which involves obscene gestures such as giving the finger or crotch grabbing, and coprographia, the urge to make obscene drawings.}}
 
 ====Translations====
 {{trans-top|person who has Tourette syndrome}}
