--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -1,4 +1,5 @@
 {{also|Bahasa}}
+
 ==Cia-Cia==
 
 ===Etymology===
@@ -34,7 +35,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 
 ===Pronunciation===
 * {{IPA|id|/baˈhasa/}}
-* {{hyphenation|id|ba|ha|sa}}
+* {{hyph|id|ba|ha|sa}}
 
 ===Noun===
 {{id-noun}}
@@ -123,3 +124,21 @@ From {{der|ms|sa|भाषा||language}}.
 * {{R:PRPM}}
 
 [[Category:ms:Language]]
+
+----
+
+==Tausug==
+
+===Noun===
+{{head|tsg|noun}}
+
+# [[language]]
+
+----
+
+==Yakan==
+
+===Noun===
+{{head|yka|noun}}
+
+# [[language]]
