# {{lb|en|tennis}} A form of the [[overhead]] [[smash]] in which the [[eastern grip]] used to hit the ball further behind the body than usually possible. # {{lb|en|climbing}} A small hook for gripping small and slippery protrusions. # {{lb|en|board sports}} A device covering the rider's boot and sometimes screwed to the board, to facilitate jumping and enhance stability. #* '''2003''', Caroline Unger, ''Surfing Long Beach Island'' (page 101) #*: Tom bought the rights to a plastic board that had <skyhook#61649094>

--- a/en/s/skyhook.801551.wikitext
+++ b/en/s/skyhook.801551.wikitext
@@ -60,6 +60,11 @@
 # {{lb|en|slang}} A [[CB radio]] [[antenna]].
 #* '''1982''', ''Amateur Radio'' (volume 38, issues 7-12, page 34)
 #*: {{...}} despite the absence of the proverbial home-grown 75-foot high steel "'''sky hook'''."
+# {{lb|en|tennis}} A form of the [[overhead]] [[smash]] in which the [[eastern grip]] used to hit the ball further behind the body than usually possible.
+# {{lb|en|climbing}} A small hook for gripping small and slippery protrusions.
+# {{lb|en|board sports}} A device covering the rider's boot and sometimes screwed to the board, to facilitate jumping and enhance stability.
+#* '''2003''', Caroline Unger, ''Surfing Long Beach Island'' (page 101)
+#*: Tom bought the rights to a plastic board that had a skateboard deck and '''skyhooks'''.
 
 ====Translations====
 {{trans-top|imaginary hook suspended in the air}}
