--- a/en/f/felsic.776709.wikitext
+++ b/en/f/felsic.776709.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{blend|en|feldspar|silica}}, with the suffix {{m|en|-ic}}.
+{{blend|en|feldspar|silica}}, {{suf|en||ic}}.
 
 ===Adjective===
 {{en-adj}}
