/* Derived terms */ <blow#61669273>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -527,10 +527,11 @@ From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blÄ
 #: {{syn|en|disaster|calamity}}
 
 =====Derived terms=====
-{{der4
+{{der3
 |en|blow-by-blow
 |body blow
 |come to blows
+|[[death blow]], [[deathblow]]
 |low blow
 }}
 
