--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -416,7 +416,7 @@ From {{bor|enm|fro|college}}, from {{der|enm|la|collegium}}.
 * {{desc|sco|college}}
 
 ====References====
-* {{R:MED Online|entry=collē̆ǧe (n.)|id=MED8420|accessdate=2018-12-12}}
+* {{R:MED Online|entry=collē̆ǧe|pos=n|id=MED8420|accessdate=2018-12-12}}
 
 [[Category:enm:Collectives]]
 [[Category:enm:Education]]
