--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -23,6 +23,9 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 # {{lb|en|intransitive|of an ink or dye}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
 #: {{ux|en|[[ink trap|Ink trap]]s [[counteract]] '''bleeding'''.}}
 # {{lb|en|transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing other [[fluid]]s.
+# {{lb|en|transitive}} To [[tap off]] high-[[pressure]] [[gas]] (usually [[air]]) from a system that produces high-pressure gas primarily for another purpose.
+#: {{ux|en|At low engine speeds, valves open to '''bleed''' some of the highly-compressed air from the later compressor stages, helping to prevent engine surging.}}
+#: {{ux|en|High-pressure air '''bled''' from the [[APU]] is used to spin up the engines and run the APU generator and hydraulic pump, and can also be used to pressurise the cabin if necessary.}}
 # {{lb|en|obsolete|transitive}} To bleed on; to make bloody.
 #* {{RQ:Mlry MrtArthr1|VIII}}
 #*: And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete
