--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -14,7 +14,7 @@ From {{inh|co|la|novem}}, from {{inh|co|ine-pro|*h₁néwn̥}}. Cognates include
 # [[nine]]
 
 ====References====
-* http://infcor.adecec.net/
+* {{R:INFCOR|nove|nove, novi}}
 
 ----
 
