--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -65,7 +65,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Esperanto: {{t|eo|fajfilo}}
 * Finnish: {{t+|fi|pilli}}
 * French: {{t+|fr|sifflet|m}}
-* Galician: {{t+|gl|chifre|m}}, {{t|gl|asubioto|m}}, {{t|gl|pipo|m}}, {{t+|gl|asubío|m}}, {{t+|gl|pito|m}}
+* Galician: {{t+|gl|pito|m}}, {{t+|gl|asubío|m}}, {{t+|gl|chifre|m}}, {{t|gl|asubioto|m}}
 * Georgian: {{t|ka|სასტვენი}}
 * German: {{t+|de|Pfeife|f}}, {{t+|de|Trillerpfeife|f}}, {{t+|de|Flöte|f}}
 * Greek: {{t+|el|σφυρίχτρα|f}}
