--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternative forms===
-* {{l|en|multicolour}} {{qualifier|Commonwealth}}
+* {{alt|en|multicolour||British spelling}}
 
 ===Etymology===
 From {{der|en|la|multicolor}}; see below.
