--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -1,17 +1,20 @@
 ==English==
 
+===Alternative forms===
+* {{alt|en|multicolor||American spelling}}
+
 ===Etymology===
 {{prefix|en|multi|colour}}
 
 ===Adjective===
 {{head|en|adjective}}
 
-# {{standard spelling of|en|from=British|from2=Canada|multicolor}}
+# {{lb|en|British spelling}} {{alt form|en|multicolor}}
 
 ===Noun===
 {{en-noun|-}}
 
-# {{standard spelling of|en|from=British|from2=Canada|multicolor}}
+# {{lb|en|British spelling}} {{alt form|en|multicolor}}
 
 ===Anagrams===
 * {{anagrams|en|a=cillmoortuu|collutorium}}
