--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -348,7 +348,7 @@ From {{der|nn|la|qua|quā}}.
 ====Pronoun====
 {{vi-pronoun}}
 
-# {{lb|vi|archaic|by males|or|southern Vietnam}} [[I]]; [[me]]
+# {{lb|vi|archaic|men's speech|or|southern Vietnam}} [[I]]; [[me]]
 #: {{ux|vi|Hôm qua '''qua''' bảo '''qua''' qua mà '''qua''' không qua. Hôm nay '''qua''' không bảo '''qua''' qua mà '''qua''' lại qua.|Yesterday ah said ah'd cuhm over but ah ain't cuhm. Today ah ain't say ah'd cuhm over but ah came.}}
 
 ===Derived terms===
