--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -363,6 +363,9 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex}}.
 ====Usage notes====
 The second and third meanings are taken when the adjective is placed after the noun. The fourth meaning is taken when it is located before the noun.
 
+====Derived terms====
+* {{l|fr|corps simple}}
+
 ====Descendants====
 * {{desc|bor=1|ro|simplu}}
 
