--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -479,6 +479,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 {{trans-top|strong wind}}
 * Finnish: {{t+|fi|puhuri}}, {{t|fi|[[kova]] [[tuuli]]}}
 * German: {{t+|de|Böe|f}}
+* Hungarian: {{t+|hu|széllökés}}
 * Italian: {{t+|it|ventata|f}}, {{t+|it|folata|f}}
 * Macedonian: {{t|mk|виор|m}}
 * Portuguese: {{t+|pt|ventania|f}}
