--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -477,6 +477,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 
 =====Translations=====
 {{trans-top|strong wind}}
+* Estonian: {{t+|et|tuulepuhang}}
 * Finnish: {{t+|fi|puhuri}}, {{t|fi|[[kova]] [[tuuli]]}}
 * German: {{t+|de|Böe|f}}
 * Hungarian: {{t+|hu|széllökés}}
