t+lv:[[vēja brāzma]] ([[WT:EDIT|Assisted]]) <blow#61753323>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -482,6 +482,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * German: {{t+|de|Böe|f}}, {{t+|de|Bö |f}}
 * Hungarian: {{t+|hu|széllökés}}, {{t+|hu|szélroham}}
 * Italian: {{t+|it|ventata|f}}, {{t+|it|folata|f}}
+* Latvian: {{t|lv|vēja brāzma}}
 * Macedonian: {{t|mk|виор|m}}
 * Portuguese: {{t+|pt|ventania|f}}
 {{trans-mid}}
