t+pt:[[bioindústria]] ([[WT:EDIT|Assisted]]) <bioindustry#61765606>

--- a/en/b/bioindustry.775841.wikitext
+++ b/en/b/bioindustry.775841.wikitext
@@ -21,7 +21,7 @@
 {{trans-mid}}
 * Japanese: {{t-needed|ja}}
 * Korean: {{t-needed|ko}}
-* Portuguese: {{t-needed|pt}}
+* Portuguese: {{t|pt|bioindústria|f}}
 * Russian: {{t-needed|ru}}
 * Spanish: {{t-needed|es}}
 * Swahili: {{t-needed|sw}}
