Recategorize into parent cat [[Category:en:Collectible card games]], since term is used in multiple CCGs, not just Magic: The Gathering. <mill#61769804>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -616,7 +616,7 @@ Ultimately from {{der|en|la|millesimum}}.
 * {{projectlink|1911|Mill}}
 
 [[Category:en:Buildings]]
-[[Category:en:Magic: The Gathering]]
+[[Category:en:Collectible card games]]
 [[Category:en:Thousand]]
 
 ----
