--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -55,7 +55,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 * Persian: {{t+|fa|چهارپا|tr=čahārpā}}
 * Polish: {{t+|pl|czworonóg|m-an}}
 * Portuguese: {{t+|pt|quadrúpede|m}}
-* Russian: {{t+|ru|четвероногий|n|alt=четвероно́гое}} {{qualifier|живо́тное}}, {{t+|ru|тетрапо́д|m|tr=tɛtrapód}}
+* Russian: {{t+|ru|четвероногий|n|alt=четвероно́гое (живо́тное)}}, {{t+|ru|тетрапо́д|m|tr=tɛtrapód}}
 * Sanskrit: {{t+|sa|चतुष्पद्|m|n}}
 * Shan: {{t|shn|တူဝ်သီႇတိ်ၼ်}}
 * Spanish: {{t+|es|cuadrúpedo|m}}, {{t|es|tetrápodo|m}}
