--- a/en/h/HDPE.26239.wikitext
+++ b/en/h/HDPE.26239.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
 
 # {{lb|en|organic compound}} {{initialism of|en|{{w|high-density polyethylene}}}}
 
