--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -3,6 +3,8 @@
 ===Etymology===
 From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en|fr|simple}}, from {{der|en|la|simplex|t=simple|lit=onefold}} (as opposed to {{m|la|duplex|lit=twofold|t=double}}), from {{m|la|semel|t=the same}} + {{m|la|plicō|t=I fold}}. See [[same]] and [[fold]]. Compare [[single]], [[singular]], [[simultaneous]], etc.
 
+Partially displaced native English {{m|ang|onefold}}.
+
 ===Pronunciation===
 * {{IPA|en|/ˈsɪmpəl/}}
 * {{audio|en|en-us-simple.ogg|Audio (US)}}
