--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -149,7 +149,7 @@ Partially displaced native English {{m|ang|onefold}}.
 * Norman: {{t|nrf|sîmpl'ye|m|f}}
 * Novial: {{t|nov|simpli}}
 * Occitan: {{t+|oc|simple}}
-* Old English: {{t-needed|ang}}
+* Old English: {{t|ang|ānfeald}}
 * Oriya: {{t|or|ସରଳ}}
 * Pashto: {{t-needed|ps}}
 * Persian: {{t+|fa|ساده|tr=sâde}}
