--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -69,35 +69,35 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa analitis
 | bahasa aplikasi
 | bahasa aplikatif
-| {{l|id|bahasa asing|t=foreign language}}
+| bahasa asing
 | bahasa bagongan
-| {{l|id|bahasa baku}}
+| bahasa baku
 | bahasa bangsawan
 | bahasa berfleksi
 | bahasa bermajas
 | bahasa berorientasi aplikasi
-| {{l|id|bahasa buatan|t=artificial language, constructed language}}
+| bahasa buatan
 | bahasa buku
 | bahasa bunga
 | bahasa campuran
-| {{l|id|bahasa daerah|t=regional language}}
-| {{l|id|bahasa dagang|t=trade language}}
+| bahasa daerah
+| bahasa dagang
 | bahasa dalam
 | bahasa definisi data
 | bahasa diinterpretasikan
 | bahasa ergatif
 | bahasa flektif
-| {{l|id|bahasa gaul|t=slang}}
+| bahasa gaul
 | bahasa generasi keempat
 | bahasa generasi kelima
 | bahasa generasi ketiga
 | bahasa grafik
 | bahasa gunung
-| {{l|id|bahasa halus}}
+| bahasa halus
 | bahasa hantu
 | bahasa hibrida
 | bahasa hidup
-| {{l|id|bahasa ibu|t=mother tongue}}
+| bahasa ibu
 | bahasa imigran
 | bahasa induk
 | bahasa inflektif
@@ -109,17 +109,17 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa kacukan
 | bahasa kalangan
 | bahasa kanak-kanak
-| {{l|id|bahasa kasar}}
+| bahasa kasar
 | bahasa kawat
 | bahasa kedua
 | bahasa kentum
 | bahasa kerabat
 | bahasa kesat
 | bahasa kiasan
-| {{l|id|bahasa klasik|t=classical language}}
-| {{l|id|bahasa komputer|t=computer language}}
+| bahasa klasik
+| bahasa komputer
 | bahasa konsonantis
-| {{l|id|bahasa kuno|t=ancient language}}
+| bahasa kuno
 | bahasa laut
 | bahasa level rendah
 | bahasa level sangat tinggi
@@ -129,7 +129,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa madya
 | bahasa markah
 | bahasa markah hiperteks
-| {{l|id|bahasa mati|t=dead language}}
+| bahasa mati
 | bahasa mesin
 | bahasa modern
 | bahasa moyang
@@ -137,7 +137,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa negara
 | bahasa oksitonis
 | bahasa paroksitonis
-| {{l|id|bahasa pasar|t=lingua franca}}
+| bahasa pasar
 | bahasa pembangkit aplikasi
 | bahasa pemrograman
 | bahasa pemrograman level tinggi
@@ -161,7 +161,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa rakit
 | bahasa rakitan
 | bahasa remaja
-| {{l|id|bahasa resmi|t=official language}}
+| bahasa resmi
 | bahasa roh
 | bahasa santai
 | bahasa sasaran
@@ -181,7 +181,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa teknis
 | bahasa terbalik
 | bahasa tingkat rendah
-| {{l|id|bahasa tubuh|t=body language}}
+| bahasa tubuh
 | bahasa tulis
 | bahasa tutur
 | bahasa umum
