--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -38,7 +38,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 * {{hyph|id|ba|ha|sa}}
 
 ===Noun===
-{{id-noun}}
+{{id-noun|pl=bahasa-bahasa}}
 
 # {{l|en|language}},
 ## {{lb|id|linguistics}} a body of words, and set of methods of combining them (called a grammar), understood by a community and used as a form of communication.
