--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -189,8 +189,9 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | bahasa vokalis
 |}}
 {{der4|id|
-| {{l|id|juru bahasa}}
-| {{l|id|pakar bahasa}}
+| juru bahasa
+| pakar bahasa
+| tata bahasa
 |}}
 
 ====Descendants====
