Adding POS to [[Template:R:MED Online]] and cleaning up alt forms using [[Project:AWB|AWB]] <bet#61791344>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -566,7 +566,7 @@ From {{inh|enm|ang|bet}}, from {{inh|enm|gem-pro|*batiz}}. In adverbial senses, 
 * {{desc|en|bet}} {{q|obsolete}}
 
 =====References=====
-* {{R:MED Online|entry=bet (adv. & adj.) |id=MED4259 |accessdate=2019-02-17}}
+* {{R:MED Online|entry=bet|pos=adv. & adj|id=MED4259 |accessdate=2019-02-17}}
 
 ===Adjective===
 {{head|enm|comparative adjective}} {{lb|enm|only in predicates}}
@@ -574,7 +574,7 @@ From {{inh|enm|ang|bet}}, from {{inh|enm|gem-pro|*batiz}}. In adverbial senses, 
 # {{comparative of|enm|wel}}
 
 =====References=====
-* {{R:MED Online|entry=bet (adv. & adj.) |id=MED4259 |accessdate=2019-02-17}}
+* {{R:MED Online|entry=bet|pos=adv. & adj|id=MED4259 |accessdate=2019-02-17}}
 
 =====Descendants=====
 * {{desc|en|bet}} {{q|obsolete}}
@@ -585,7 +585,7 @@ From {{inh|enm|ang|bet}}, from {{inh|enm|gem-pro|*batiz}}. In adverbial senses, 
 # Something or someone which is more {{m|enm|wel}} (i.e. [[better]]).
 
 =====References=====
-* {{R:MED Online|entry=bet (adv. & adj. as n.) |id= MED4260 |accessdate=2019-02-17}}
+* {{R:MED Online|entry=bet|pos=adv. & adj. as n|id= MED4260 |accessdate=2019-02-17}}
 
 =====Descendants=====
 * {{desc|en|bet}} {{q|obsolete}}
