--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -272,7 +272,7 @@ From {{inh|enm|ang|cop}}, from {{inh|enm|gem-pro|*kuppaz}}.
 * {{desc|cy|copa|bor=1}}
 
 ====References====
-* {{R:MED Online|entry=cop (n.) |id=MED9646 |accessdate=2018-03-25}}
+* {{R:MED Online|entry=cop |pos=n |id=MED9646 |accessdate=2018-03-25}}
 
 ----
 
