--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -24,6 +24,30 @@ From {{bor|en|fr|bled}}, from {{der|en|arq|-}}, from {{der|en|ar|بِلَاد}}.
 
 ----
 
+==Czech==
+
+===Pronunciation===
+* {{cs-IPA}}
+
+===Adjective===
+{{head|cs|adjective form}}
+
+# {{inflection of|cs|bledý||m|s|nominal|predicative}}
+
+===Declension===
+{{cs-decl-pron-adj
+| snomma = bled
+| snomm = bled
+| snomf = bleda
+| snomn = bledo
+| pnomma = bledi
+| pnomm = bledy
+| pnomf = bledy
+| pnomn = bleda
+}}
+
+----
+
 ==Dutch==
 
 ===Pronunciation===
