--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -530,7 +530,7 @@ From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blÄ
 #* {{quote-journal|en|date=April 15, 2011| author=Saj Chowdhury| title=Norwich 2 - 1 Nott'm Forest| work=BBC Sport| url=http://news.bbc.co.uk/sport2/hi/football/13009332.stm| passage=Norwich returned to second in the Championship with victory over Nottingham Forest, whose promotion hopes were dealt another '''blow'''.}}
 #: {{syn|en|disaster|calamity}}
 # {{lb|en|AU|shearing|historical}} A [[cut]] made to a sheep's [[fleece]] by a [[shearer]] using [[hand-shears]].
-#* {{quote-journal|1=en|date=5 Dec 1891|journal=The Bacchus Marsh Express|place=Victoria|page=7|column=7|text=Click goes his shears; click, click, click.<br> Wide are the blows, and his hand is moving quick,<br> The ringer looks round, for he lost it by a '''blow''',<br> And he curses that old shearer with the bare belled ewe.}}
+#* {{quote-journal|1=en|date=5 Dec 1891|journal=The Bacchus Marsh Express|place=Victoria|page=7|column=7|text=Click goes his shears; click, click, click.<br> Wide are the '''blows''', and his hand is moving quick,<br> The ringer looks round, for he lost it by a '''blow''',<br> And he curses that old shearer with the bare belled ewe.}}
 
 =====Derived terms=====
 {{der3
