--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{m|en|four}} + {{m|en|score|t=period of 20 years}} + {{m|en|and}} + {{m|en|seven}} + {{m|en|years}} + {{m|en|ago}}, literally “87 years ago”, the beginning of the {{w|Gettysburg Address}} made on November 19, 1863, by [[w:President of the United States|United States President]] {{w|Abraham Lincoln}} (1809–1865). The widespread familiarity of Lincoln’s address, the unusual and poetic wording, and its status as the first words of the speech have caused the phrase to enter the public consciousness.
+From {{m|en|four}} + {{m|en|score|t=the number 20}} + {{m|en|and}} + {{m|en|seven}} + {{m|en|years}} + {{m|en|ago}}, literally “87 years ago”, the beginning of the {{w|Gettysburg Address}} made on November 19, 1863, by [[w:President of the United States|United States President]] {{w|Abraham Lincoln}} (1809–1865). The widespread familiarity of Lincoln’s address, the unusual and poetic wording, and its status as the first words of the speech have caused the phrase to enter the public consciousness.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈfɔː skɔː‿ɹən ˌsɛvən jɛːz əˌɡəʊ/}}
