--- a/en/n/NSA.26206.wikitext
+++ b/en/n/NSA.26206.wikitext
@@ -15,7 +15,8 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|government|US}} {{initialism of|en|w:National Security Agency|National Security Agency}}
+# {{lb|en|government|US}} {{init of|en|w:National Security Agency|National Security Agency}}
+# {{lb|en|government|US|humorous}} {{init of|en|w:National Security Agency|National Surveillance Agency}}
 
 ====Translations====
 {{trans-top|initialism: National Security Agency}}
