# {{lb|en|UK|prison slang}} Grey [[trousers]] and/or [[jacket]]s worn by [[prisoner]]s on relatively [[formal]] occasions. #* '''1955''', ''The Bedside "Guardian"'' (page 40) #*: There was a clatter at the back of the gallery, a sharp word from a warder, and the men marched in in their prison '''greys''', jackets too large, trousers too small. #* Quoted in '''1982''', Geoff Coggan, ‎Martin J. Walker, ''Frightened for My Life: An Account of Deaths in British Prisons'' (page 110) #*: 'No one told <greys#61847702>

--- a/en/g/greys.741395.wikitext
+++ b/en/g/greys.741395.wikitext
@@ -12,6 +12,13 @@
 {{head|en|noun form}}
 
 # {{plural of|en|grey}}
+# {{lb|en|UK|prison slang}} Grey [[trousers]] and/or [[jacket]]s worn by [[prisoner]]s on relatively [[formal]] occasions.
+#* '''1955''', ''The Bedside "Guardian"'' (page 40)
+#*: There was a clatter at the back of the gallery, a sharp word from a warder, and the men marched in in their prison '''greys''', jackets too large, trousers too small.
+#* Quoted in '''1982''', Geoff Coggan, ‎Martin J. Walker, ''Frightened for My Life: An Account of Deaths in British Prisons'' (page 110)
+#*: 'No one told me that I had to be dressed in '''Greys''' not Blues! When I appeared before the BOV I was told that I could not go in and see them because I was improperly dressed.'
+#* '''2013''', Constantine Buller, ''Operation Dolby'' (page 266)
+#*: “Drop your trousers!” I loosened the clasp on my prison '''greys''' and my trouser dropped to my ankles.
 
 ===Anagrams===
 * {{anagrams|en|a=egrsy|gyres}}
