--- a/en/i/individualistic.742106.wikitext
+++ b/en/i/individualistic.742106.wikitext
@@ -12,3 +12,4 @@ From {{affix|en|individualist|-ic}} or {{affix|en|individual|-istic}}.
 
 ====Related terms====
 * {{l|en|individualism}}
+{{C|en|Personality}}
