/* Indonesian */ Added category "id:Time" <malam#61855420>

--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -87,6 +87,8 @@ Borrowed from {{bor|id|jv|ꦩꦭꦩ꧀}}, probably from {{der|id|sa|मल}}. {{
 ===Further reading===
 * {{R:KBBI Daring}}
 
+[[Category:id:Time]]
+
 ----
 
 ==Latin==
