--- a/en/o/Oaxacan.775472.wikitext
+++ b/en/o/Oaxacan.775472.wikitext
@@ -14,4 +14,10 @@
 
 # A native or inhabitant of the Mexican state of [[Oaxaca]].
 
+====Translations====
+{{trans-top}}
+* Spanish: {{t|es|oaxaqueño|m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[Category:en:Demonyms]]
