/* Translations */Added malay translation <otter#61878911>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -102,7 +102,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * Low German: {{t|nds|Otter|m}}
 * Lun Bawang: {{t|lnd|dengen}}
 * Macedonian: {{t|mk|видра|f}}
-* Malay: {{t|ms|anjing air}}, {{t|ms|berang-berang}}
+* Malay: {{t|ms|anjing air}}, {{t|ms|berang-berang}}, {{t|ms|memerang|}}
 *: Jawi: {{t|ms|انجيڠ اءير}}, {{t|ms|برڠ٢}}
 {{trans-mid}}
 * Malayalam: {{t|ml|നീർനായ}}
