--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -69,8 +69,9 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #*: Through the court his courtesy was '''blown'''.
 # {{lb|en|obsolete}} To inflate, as with pride; to puff up.
 #* {{RQ:Shakespeare Twelfth Night|II|v|263|2|O peace, now he's deepely in: looke how imagination '''blowes''' him.}}
-# {{lb|en|intransitive}} To breathe hard or quick; to pant; to puff.
+# {{lb|en|intransitive}} To breathe hard or quick; to [[pant]]; to [[puff]].
 #* {{RQ:Shakespeare Merry Wives|III|iii|58|1|''{{abbr|Rob.|Robin}}'' Miſtris ''Ford'', Miſtris ''Ford'': heere's Miſtris ''Page'' at the doore, ſsweating, and '''blowing''', and looking wildely, and would needs ſpeake with you preſently.}}
+#* {{quote-book|1=en|year=1886|translator=H.L. Br&aelig;kstad|author=Peter Christen Asbj&oslash;rnsen|authorlink=Peter Christen Asbj&oslash;rnsen|title=Folk and Fairy Tales|page=184|passage=Soon after he appeared again, '''blowing''' very hard, but the next moment he turned over; Rasmus was not slow in putting the boat-hook in him and hauling him into the boat with my assistance.}}
 # {{lb|en|transitive}} To put out of breath; to cause to blow from fatigue.
 #: {{ux|en|to '''blow''' a horse}}
 #: {{rfquotek|en|Sir Walter Scott}}
