--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -392,7 +392,7 @@ From {{der|it|he|בַּיִ״ת|tr=báyiṯ}}.
 From {{inh|ltg|ine-bsl-pro|*bet}}, from {{der|ltg|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside}}. Cognates include {{cog|lv|bet}} and {{cog|lt|bet}}. Not related to {{ncog|en|but}}.
 
 ===Pronunciation===
-* {{IPA|ltg|[bæt]}}
+* {{IPA|ltg|/bæt/}}
 
 ===Conjunction===
 {{head|ltg|conjunction}}
