t+sa:[[वंश]] t+mnw:[[ဒုန်]] t+pl:[[bambus]] t-balance ([[WT:EDIT|Assisted]]) <bamboo#61908241>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -109,14 +109,15 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|b
 * Latin: {{t|la|harundō Indica|f}}
 * Latvian: {{t|lv|bambuss|m}}
 * Lithuanian: {{t|lt|bambukas|m}}
-{{trans-mid}}
 * Lü: {{t|khb|ᦺᦙᧉᦌᦱᧂ}}
 * Macedonian: {{t|mk|бамбус|m}}
+{{trans-mid}}
 * Malay: {{t|ms|pering}}
 *: Jawi: {{t|ms|بولوه}}, {{t|ms|بمبو}}, {{t|ms|اءور}}
 *: Rumi: {{t+|ms|buluh}}, {{t+|ms|bambu}}, {{t|ms|aur}}
 * Malayalam: {{t+|ml|മുള}}
 * Maori: {{t|mi|inanga}}
+* Mon: {{t|mnw|ဒုန်|tr=dun}}
 * Mongolian: {{t+|mn|хулс}}
 * Navajo: {{t|nv|lókʼaatsoh}}
 * Norman: {{t|nrf|bambou|m}}
@@ -127,6 +128,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|b
 * Paiwan: {{t|pwn|qau}}
 * Pashto: {{t+|ps|باڼس}}
 * Persian: {{t+|fa|خیزران|tr=xayzarân}}
+* Polish: {{t+|pl|bambus}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Rarotongan: {{t|rar|ko'e}}
 * Rohingya: {{t|rhg|bañc}}
@@ -135,6 +137,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|b
 * S'gaw Karen: {{t|ksw|ဝၣ်}}
 * Salar: {{t|slr|qamuş}}
 * Samoan: {{t|sm|ʻofe}}
+* Sanskrit: {{t+|sa|वंश}}
 * Scottish Gaelic: {{t|gd|bambù|m}}, {{t|gd|cuilc-Fhrangach|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ба̀мбус|m}}, {{t|sh|тр̀сковача|f}}
