Added 4th military definition for grognard <grognard#61917312>

--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -13,6 +13,9 @@ From {{bor|en|fr|grognard||grumbler}}.
 # {{lb|en|historical}} A soldier of the original imperial guard that was created by [[w:Napoleon I|Napoleon I]] in 1804 and that made the final French charge at [[Waterloo]].
 # {{lb|en|games|slang}} Someone who [[enjoys]] playing older war-games or roleplaying games, or older versions of such games, when newer ones are available.
 #: ''James is such a '''grognard''', he only plays the original edition of Dungeons and Dragons.''
+
+# {{lb|en|Military}} A Soldier or enthusiast in attention to detail and rules and regulations. Respected as an expert in things most people don’t care about.
+
 #* {{seeCites|en}}
 
 ====Translations====
